# playwright_chat

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  packages.txt  pyproject.toml  render.yaml  requirements.txt  spec.md  verify_normalization.py
.streamlit/: secrets.toml.example
agents/: browser_agent.py
models/: scenario.py
