[project]
name = "playwright-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.0.8",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.1.0",
    "nest-asyncio>=1.6.0",
    "playwright>=1.56.0",
    "playwright-stealth>=2.0.0",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "streamlit>=1.50",
    "pyarrow<21",
]
